# h5x

./: .appveyor.yml  .travis.yml  CMakeLists.txt  CMakePresets.json  README.md  jamroot.jam  vcpkg.json
.github/workflows/: clang-tools.yml
benchmark/: CMakeLists.txt  benchmark.cpp  data.hpp  jamfile.jam
chunker/: CMakeLists.txt  chunker.cpp  loggers.cpp  loggers.hpp  main.cpp
cmake/: config.cmake.in
explorer/: CMakeLists.txt  h5tool.cpp  main.cpp  options.cpp
h5x/: CMakeLists.txt  data_sink.cpp  data_sink.hpp  h5_describe.hpp  h5_fused.hpp  h5_info.hpp  h5_types.hpp  h5_utility.hpp  h5x.hpp  iterator.hpp  jamfile.jam  read_cache.hpp
h5x/detail/: read_cache.hpp  view.hpp
test/: CMakeLists.txt  bizarre_test.cpp  cache_test.cpp  data_sink_test.cpp  h5x_cache_test.cpp  iterator_test.cpp  jamfile.jam  multi_dim_iterator_test.cpp  test.cpp  test.hpp
utils/bizarre/: CMakeLists.txt  bizarre.cpp  bizarre.hpp  jamfile.jam
write/: CMakeLists.txt  config.hpp  h5tool.cpp  main.cpp
